--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -75,119 +75,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 9,  8,  6,  7,  4,  3,  3,  3, 10,  6])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "equal_to = [2,4,6,8,10,12]\n",
-    "# nrow.sum() in equal_to     # this is to set true\n",
-    "#np.sum([[0, 1], [0, 5]], axis=1)\n",
-    "\n",
-    "roll_sum = np.sum(rolls, axis=1)\n",
-    "roll_sum"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# lambda?\n",
-    "# \n",
-    "\n",
-    "roll_sum in "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 5, 2, 4, 3, 5, 3, 5, 1, 6, 1, 2, 4, 5, 5, 5, 2, 6, 4, 3])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#showing without the reshape\n",
-    "rolls = np.random.choice([1, 2, 3, 4, 5, 6], n_trials * n_dice)\n",
-    "rolls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "only 2 non-keyword arguments accepted",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-724db8475e17>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# newarr = a[np.array([3, 1, 2 ])]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnewarr1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrolls\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_trials\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_dice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mnewarr1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: only 2 non-keyword arguments accepted"
-     ]
-    }
-   ],
-   "source": [
-    "# newarr = a[np.array([3, 1, 2 ])] \n",
-    "\n",
-    "newarr1 = rolls[np.array([0], n_trials, n_dice)]\n",
-    "newarr1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "newarr2 = rolls[np.array([1])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -208,65 +95,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 1, 0, 0, 0, 0, 0, 1],\n",
-       "       [1, 0, 1, 1, 0, 1, 0, 1],\n",
-       "       [0, 1, 1, 0, 0, 0, 1, 1],\n",
-       "       [1, 0, 1, 0, 0, 0, 0, 1],\n",
-       "       [1, 1, 0, 0, 1, 0, 0, 1],\n",
-       "       [0, 1, 0, 1, 1, 1, 0, 0],\n",
-       "       [0, 0, 1, 1, 0, 0, 1, 0],\n",
-       "       [1, 0, 0, 1, 0, 1, 0, 1],\n",
-       "       [0, 0, 0, 0, 1, 0, 0, 1],\n",
-       "       [1, 1, 1, 0, 0, 0, 0, 1]])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n_flips = nrows = 10\n",
+    "n_flips = nrows = 100000\n",
     "n_coins = ncols = 8\n",
     "np.random.seed(123)\n",
     "\n",
     "flips = np.random.choice([0,1], n_flips * n_coins).reshape(nrows, ncols)\n",
-    "flips"
+    "# flips"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flip_sum = np.sum(flips, axis=1)\n",
+    "# flip_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heads_thrice_count = 0\n",
+    "for flip in flip_sum:\n",
+    "    if flip == 3:\n",
+    "        heads_thrice_count += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 5, 4, 3, 4, 4, 3, 4, 2, 4])"
+       "0.22077"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flip_sum = np.sum(flips, axis=1)\n",
-    "flip_sum"
+    "probability_3_heads_only = heads_thrice_count / len(flip_sum)\n",
+    "probability_3_heads_only"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -286,8 +168,66 @@
     "\n",
     "web_dev = 3 choices = [1,2,3]     vs.  ds_co = 1 choices [4]\n",
     "\n",
-    "chance_pool = [1\n",
-    "\n"
+    "two billboards with ds_co = 4,4 #so 2 rolls of 4 sided die, counting a 4-4 double only\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_rolls = nrows = 100000\n",
+    "n_dice = ncols = 2\n",
+    "np.random.seed(123)\n",
+    "\n",
+    "rolls = np.random.choice([1,2,3,4], n_rolls * n_dice).reshape(nrows, ncols)\n",
+    "# rolls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6317"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "double_fours_count = 0\n",
+    "for roll in rolls:\n",
+    "    if (roll[0] + roll[1]) == 8:\n",
+    "        double_fours_count += 1\n",
+    "double_fours_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06317"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probability_two_ds_billboards = double_fours_count / len(rolls)\n",
+    "probability_two_ds_billboards"
    ]
   },
   {
