on Q5 - but need to rework Q4 with np.random.normal

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,9 +249,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24173"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### will have to try using the np.random.normal method\n",
+    "   ### apparently can set the mean and std\n",
+    "\n",
+    "weekly_purchases = nrows = 100000\n",
+    "daily_buy = ncols = 5\n",
+    "np.random.seed(123)\n",
+    "\n",
+    "all_buys = np.random.choice([2.5, 3, 4, 4.5], weekly_purchases * daily_buy).reshape(nrows, ncols)\n",
+    "#all_buys # this for showing result\n",
+    "\n",
+    "# make array to sum each week individually\n",
+    " # this will make just a series of totals\n",
+    "\n",
+    "weekly_buy_sums = []\n",
+    "for buys in all_buys:\n",
+    "    weekly_buy_sums.append(np.sum(buys))\n",
+    "#weekly_buy_sums # this for showing result\n",
+    "\n",
+    "# now check if the 17 stocked Monday are consumed by weekly sums\n",
+    "\n",
+    "fri_availability_list = []\n",
+    "for week_sum in weekly_buy_sums:\n",
+    "    weekly_available = 17 - week_sum\n",
+    "    if weekly_available >= 1:\n",
+    "        fri_availability_list.append(1)\n",
+    "    else:\n",
+    "        fri_availability_list.append(0)\n",
+    "\n",
+    "# fri_availability_list # this for showing result\n",
+    "\n",
+    "## now get probability\n",
+    "np.mean(fri_availability_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17.5, 19.5, 17.0, 17.0, 18.5, 14.5, 18.5, 18.0, 15.5, 16.0]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 0, 0, 1, 0, 0, 1, 1]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
