--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -151,6 +151,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extra notes fm class\n",
+    "# "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -370,6 +380,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mh =  np.random.normal(178, 8, n)\n",
+    "fh = np.random.normal(170, 6, n)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -393,10 +414,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.random.choice?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "downloads = np.random.choice(['dload success','corrupted'], (n, 450), p=[249/250], 1/250)\n",
+    "((downloads == 'corrupted').sum(axis=1) == 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# what is \"1 -\"\" thing"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -415,7 +457,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# class notes \n",
+    "# using .all(axis=1)\n",
+    "# (lunches == 'No Truck').all(axis=1).mean()\n",
+    "# .any"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -425,6 +472,20 @@
     "If 23 people are in the same room, \n",
     "what are the odds that two of them share a birthday? \n",
     "What if it's 20 people? 40?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class notes\n",
+    "# np.unique with .size \n",
+    "\n",
+    "# datafriame the array then  s.nunique\n",
+    "\n",
+    "# "
    ]
   }
  ],
