finished THEORY - now on SIMULATIONS

--- a/probability-distributions.ipynb
+++ b/probability-distributions.ipynb
@@ -11,6 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "note to self - finished the Scipy/ Theory questions\n",
+    "now working on finishing simulations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# note - run these both with simulation and scipy"
    ]
   },
@@ -20,7 +28,14 @@
    "source": [
     "For the following problems, use python to simulate the problem and calculate an experimental probability, then compare that to the theoretical probability.\n",
     "\n",
-    "1 [skip] A bank found that the average number of cars waiting during the noon hour at a drive-up window follows a Poisson distribution with a mean of 2 cars. Make a chart of this distribution and answer these questions concerning the probability of cars waiting at the drive-up window.\n",
+    "1 A bank found that the average number of cars waiting during the noon hour at a drive-up window follows a Poisson distribution with a mean of 2 cars. Make a chart of this distribution and answer these questions concerning the probability of cars waiting at the drive-up window.\n",
+    "\n",
+    " What is the probability that no cars drive up in the noon hour?\n",
+    "\n",
+    " What is the probability that 3 or more cars come through the drive through?\n",
+    "\n",
+    " How likely is it that the drive through gets at least 1 car?\n",
+    "\n",
     "\n",
     "2 Grades of State University graduates are normally distributed with a mean of 3.0 and a standard deviation of .3. Calculate the following:\n",
     "\n",
@@ -52,13 +67,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "from scipy.stats import norm\n",
+    "\n",
+    "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1\n",
+    "# A bank found that the average number of cars waiting during the noon hour \n",
+    "# at a drive-up window follows a Poisson distribution with a mean of 2 cars. \n",
+    "\n",
+    "# Make a chart of this distribution and answer these questions concerning \n",
+    "# the probability of cars waiting at the drive-up window.\n",
+    "\n",
+    "# What is the probability that no cars drive up in the noon hour?\n",
+    "\n",
+    "# What is the probability that 3 or more cars come through the drive through?\n",
+    "\n",
+    "# How likely is it that the drive through gets at least 1 car?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 Theory\n",
+    "# A bank found that the average number of cars waiting during the noon hour \n",
+    "# at a drive-up window follows a Poisson distribution with a mean of 2 cars. \n",
+    "\n",
+    "# Make a chart of this distribution and answer these questions concerning \n",
+    "# the probability of cars waiting at the drive-up window.\n",
+    "\n",
+    "# What is the probability that no cars drive up in the noon hour?\n",
+    "\n",
+    "# What is the probability that 3 or more cars come through the drive through?\n",
+    "\n",
+    "# How likely is it that the drive through gets at least 1 car?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -204,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # probability solutions\n",
+    "   # theory\n",
     "# 2 Grades of State University graduates are normally distributed \n",
     "# with a mean of 3.0 and a standard deviation of .3. Calculate the following:\n",
     "\n",
@@ -221,9 +294,7 @@
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from scipy import stats"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -269,10 +340,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "stats.norm?\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -302,16 +375,40 @@
     "#3 theory\n",
     "# A marketing website has an average click-through rate of 2%. \n",
     "# One day they observe 4326 visitors and 97 click-throughs.\n",
-    "# How likely is it that this many people or more click through?"
+    "# How likely is it that this many people or more click through?\n",
+    "\n",
+    "  # visitors = 4326  #aka\n",
+    "  # click_thru = .02\n",
+    "  # n [threshold] 97 , need n-1 or 96 because SF is exclusive\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1397582363130086"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.binom(4326, .02).sf(96)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3 stats.binom(4326, .97).sf(10)"
+    "## not a POISSON. stats.poisson(5).sf(7)"
    ]
   },
   {
@@ -320,15 +417,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats.poisson(5).sf(7)"
+    "stats.norm(4326, .97).isf(7)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -348,7 +438,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "NP.RAND"
+   ]
   },
   {
    "cell_type": "code",
@@ -356,7 +448,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4 You are working on some statistics homework consisting of 100 questions \n",
+    "# 4 theory\n",
+    "# You are working on some statistics homework consisting of 100 questions \n",
     "# where all of the answers are a probability rounded to the hundreths place. \n",
     "#   Looking to save time, you put down random probabilities as the answer to each question.\n",
     "\n",
@@ -364,26 +457,58 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "100 questions / answers as .00%\n",
+    "    really 60\n",
+    " .01 = probablitiy ( .00 ... .99 )\n",
+    " binomial [ like coin toss, ie just right or wrong ]\n",
+    "  60 = ncols\n",
+    "  \n",
+    "stats.binom(30 - TRIALS, .25 - PROBABILITY). ????"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4528433576092388"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 5 The codeup staff tends to get upset when the student break area is not cleaned up. \n",
-    "# Suppose that there's a 3% chance that any one student cleans the break area when they visit it,\n",
-    "#    and, on any given day, about 90% of the 3 active cohorts of 22 students visit the break area.\n",
-    "\n",
-    "# How likely is it that the break area gets cleaned up each day? \n",
-    "\n",
-    "# How likely is it that it goes two days without getting cleaned up? \n",
-    "# All week?"
+    "stats.binom(60, .01).sf(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4528433576092388"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sans 1, this finds probability of getting 0 correct\n",
+    "  # subtracting from 1 reveals the remainder that 1 could be correct\n",
+    "1 - stats.binom(60, .01).cdf(0)"
    ]
   },
   {
@@ -411,9 +536,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.97"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -422,7 +558,141 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6 You want to get lunch at La Panaderia, but notice that the line is usually very long at lunchtime. \n",
+    "# 5 theory\n",
+    "# The codeup staff tends to get upset when the student break area is not cleaned up. \n",
+    "# Suppose that there's a 3% chance that any one student cleans the break area when they visit it,\n",
+    "#    and, on any given day, about 90% of the 3 active cohorts of 22 students visit the break area.\n",
+    "\n",
+    "# How likely is it that the break area gets cleaned up each day? \n",
+    "\n",
+    "# How likely is it that it goes two days without getting cleaned up? \n",
+    "# All week?\n",
+    "\n",
+    "# 90% of 66 visitors  \n",
+    "# 1 days [any given day - chances equal]\n",
+    "    # do still use 5 for full work week? or 7\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "visits = round(66 * .9, 0)\n",
+    "visits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  one day setup\n",
+    "# visits = 59\n",
+    "# prob = .03\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# normal 3% chance of 1 student cleaning break area when visited\n",
+    "# stats.binom(1, .03).pmf(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8342199288437355"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# again, area under cirle... to left of 1 aka \"> 0\"(aka at least more than 0  which means clean)\n",
+    "# so SF = n-1 or 1 - 1 = 0\n",
+    "stats.binom(59, .03).sf(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.028900000000000012"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# so day chance for being clean = 83~%\n",
+    "# now find chance for 2 days to be TRUE\n",
+    "# still a binom fx - aka obs & probabilities\n",
+    "\n",
+    "# remember the area under the curve - which direction = which fx\n",
+    "  # NOTE - cdf is inclusive!!!\n",
+    "stats.binom(2, .83).cdf(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.103386730000007e-06"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ALL WEEK\n",
+    "\n",
+    "stats.binom(7, .83).cdf(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6 \n",
+    "# You want to get lunch at La Panaderia, but notice that the line is usually very long at lunchtime. \n",
     "# After several weeks of careful observation, you notice that the average number of people \n",
     "# in line when your lunch break starts is normally distributed with a mean of 15 and standard deviation of 3. \n",
     "\n",
@@ -446,7 +716,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6 You want to get lunch at La Panaderia, but notice that the line is usually very long at lunchtime. \n",
+    "# 6 theory\n",
+    "# You want to get lunch at La Panaderia, but notice that the line is usually very long at lunchtime. \n",
     "# After several weeks of careful observation, you notice that the average number of people \n",
     "# in line when your lunch break starts is normally distributed with a mean of 15 and standard deviation of 3. \n",
     "\n",
@@ -454,7 +725,64 @@
     "        # what is the likelihood that you have at least 15 minutes left to eat your food \n",
     "        # before you have to go back to class? \n",
     "\n",
-    "# Assume you have one hour for lunch, and ignore travel time to and from La Panaderia."
+    "# Assume you have one hour for lunch, and ignore travel time to and from La Panaderia.\n",
+    "\n",
+    "# avg observation has mean 15, with std 3\n",
+    "    # would be a normal dist\n",
+    "# an_order = 2 min #/ person\n",
+    "# food_begotten = an_order + 10 min\n",
+    "\n",
+    "# ? have 15min left (or consumed under 46 minutes)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mis en place\n",
+    "mean = 15\n",
+    "std_dev = 3\n",
+    "lunch = 60\n",
+    "my_compl_order = 12  # aka 2 per person + 10 fm order to reciept\n",
+    "time_2eat = 15\n",
+    "total_excluded_time = 15 + 12\n",
+    "\n",
+    "# with a mean of 15 and 2 min per person = 30 min\n",
+    "# sd = 2 * sd of 3 = 6\n",
+    "# time_left = 60 min - \"time to order\" - \"time to recieve order\" = 33 min\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6914624612740131"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.norm(30, 6).cdf(33)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3"
    ]
   },
   {
